# MinecrarchOS

./: .gitignore  .markdownlint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  cliff.toml  deny.toml  readme.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: contributing.md  git-workflow.md  ipc.md  mvp.md  roadmap.md  runtime.md  session-model.md  skills.md  state-machines.md  testing-strategy.md
docs/adr/: 0001-base-system-arch-linux.md  0002-kernel-linux-zen.md  0003-bootloader-systemd-boot.md  0004-filesystem-btrfs.md  0005-session-compositor-gamescope.md  0006-no-desktop-environment.md  0007-bedrock-edition-initial-target.md  0008-launcher-backend-prism.md  0009-shell-as-orchestration-layer.md  0010-controller-first-ux.md  0011-shell-implementation-language.md  0012-ipc-mechanism.md  0013-shell-ui-framework-gtk4-libadwaita.md  README.md
docs/architecture/: README.md  enforcement.md  layers.md
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/: hostname  mkinitcpio.conf  os-release
iso/airootfs/etc/mkinitcpio.d/: linux-zen.preset
iso/airootfs/etc/systemd/system/getty@tty1.service.d/: autologin.conf
iso/airootfs/etc/systemd/user/: gamescope-session.service  minecrarch-logging.service  minecrarch-modpack-manager.service  minecrarch-overlay.service  minecrarch-shell.service  minecrarch-updater.service
iso/airootfs/etc/systemd/user/default.target.wants/: gamescope-session.service  minecrarch-logging.service  minecrarch-modpack-manager.service  minecrarch-overlay.service  minecrarch-updater.service
iso/airootfs/root/: customize_airootfs.sh
iso/efiboot/loader/: loader.conf
iso/efiboot/loader/entries/: minecrarch-fallback.conf  minecrarch.conf
services/logging/: CONTRACT.md  Cargo.toml
services/logging/src/: logger.rs  main.rs
services/modpack-manager/: CONTRACT.md  Cargo.toml
services/modpack-manager/src/: main.rs  manager.rs
services/overlay/: CONTRACT.md  Cargo.toml
services/overlay/src/: iface.rs  main.rs  window.rs
services/updater/: CONTRACT.md  Cargo.toml
services/updater/src/: main.rs  updater.rs
shared/: Cargo.toml
shared/src/: dbus_types.rs  error.rs  lib.rs
shell/: Cargo.toml
shell/src/: dbus.rs  main.rs  session.rs  ui.rs
tests/: README.md
tools/: check-deps.sh
tools/fake-game/: Cargo.toml
tools/fake-game/src/: main.rs
