[package]
name = "minecrarch-shell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "minecrarch-shell"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
zbus = { workspace = true }
tokio = { workspace = true }
async-channel = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
minecrarch-shared = { path = "../shared", version = "0.1" }
