[package]
name = "minecrarch-logging"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "minecrarch-logging"
path = "src/main.rs"

[dependencies]
zbus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
anyhow = { workspace = true }
minecrarch-shared = { path = "../../shared", version = "0.1" }
