[package]
name = "minecrarch-overlay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "minecrarch-overlay"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
gtk4-layer-shell = { version = "0.8", features = ["v1_3"] }
zbus = { workspace = true }
tokio = { workspace = true }
async-channel = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
anyhow = { workspace = true }
minecrarch-shared = { path = "../../shared", version = "0.1" }
